<resources>
    <string name="app_name">My Places</string>
    <string name="title_activity_cities">Select city</string>
    <string name="title_activity_events">Events in </string>
    <string name="event_name">Name</string>
    <string name="event_description">Description</string>
    <string name="event_author">Author</string>
    <string name="event_location">Location</string>
    <string name="event_timing">Date</string>
    <string name="select_city">Select city</string>
    <string name="select_event">Select event</string>
    <string name="events_in">Events in </string>
    <string name="add_event">Add event</string>
    <string name="add_event_in">Add event in </string>
    <string name="event_added_ok">"Event added successfully!</string>
    <string name="event_added_fail">Failed to add event!</string>
    <string name="event_details">Event details</string>
    <string name="select_date">Select date</string>
    <string name="verify_event_name">Event name is not correct</string>
    <string name="verify_event_location">Event location is not correct</string>
    <string name="verify_event_author">Event author is not correct</string>
    <string name="verify_event_description">Event description is not correct</string>
    <string name="verify_event_timing">Event date is not set</string>
</resources>
